--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <h1>
         Hello Everyone!!
     </h1>
+    <h2>
+        Welcome to my git tutorial video!!!
+    </h2>
 </body>
 
 </html>
