--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>
-        Hello Everyone!!
+        Hello temperory!!
     </h1>
     <h2>
         Welcome to my git tutorial video!!!
