--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>
 
-        Hello temperory!!
+        Not Temp!!
     </h1>
     <h2>
         Welcome to my git tutorial video!!!
